# cookiecutter-python-template

./: README.md  cookiecutter.json
{{ cookiecutter.project_name }}/: .editorconfig  .pre-commit-config.yaml  README.md  Taskfile.yaml  pyproject.toml
